[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "promptcraft"
version = "1.0.0"
description = "轻量级AI Prompt优化与管理工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PromptCraft Team", email = "promptcraft@example.com"}
]
keywords = ["prompt", "ai", "llm", "claude", "gpt", "management", "optimization", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
promptcraft = "promptcraft.cli:main"
pc = "promptcraft.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/promptcraft"
Repository = "https://github.com/gitstq/promptcraft"
Issues = "https://github.com/gitstq/promptcraft/issues"

[tool.setuptools]
packages = ["promptcraft"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
